removed unneccessary script import

--- a/comfy/templates/series/series.html
+++ b/comfy/templates/series/series.html
@@ -1,5 +1,5 @@
 {% extends 'reader/base.html' %}
-{% load static %}
+<!-- {% load static %} -->
 {% block title %}Series Viewer{% endblock %}
 {% block styles %}
 <style>
@@ -8,9 +8,6 @@
     min-width: 500px;
   }
 </style>
-{% endblock %}
-{% block scripts %}
-<script src="{% static 'core/js/index.js' %}"></script>
 {% endblock %}
 {% block content %}
 <h2 class="text-center mt-3">Series</h2>
