--- a/templates/reader/base.html
+++ b/templates/reader/base.html
@@ -9,7 +9,8 @@
         {% block styles %}{% endblock %}
         {% block scripts %}{% endblock %}
     </head>
-    <body style="display: flex; flex-direction: column; height: 100%;" class="position-relative">
+    <body style="display: flex; flex-direction: column; height: 100%; width: 100%;" class="position-relative">
+        <span id="top"></span>
         <nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary bg-info">
             <div class="container-fluid justify-content-center">
                 <a class="navbar-brand link-light" href="/"><b>comfy reader.</b></a>
@@ -64,6 +65,7 @@
         <div style="flex: 1 0 auto;">
             {% block content %}{% endblock %}
         </div>
+        <span id="bottom"></span>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
