fix: issues in home and snatch pages
snatch page now works asynchronously.
.. + template rendering issues fixed
home page has snatch tab in nav bar.

--- a/comfy/templates/home/home.html
+++ b/comfy/templates/home/home.html
@@ -1,8 +1,8 @@
 {% extends 'reader/base.html' %}
 {% block navbarContent %}
-    <!-- <li class="nav-item">
-        <a class="nav-link active link-light" aria-current="page" href="/snatch">Snatch</a>
-    </li> -->
+    <li class="nav-item">
+        <a class="nav-link active link-light" aria-current="page" href="{% url 'comfy:snatch' %}">Snatch</a>
+    </li>
 {% endblock %}
 
 {% block styles %}
