styles: simple style fix

--- a/comfy/templates/series/series.html
+++ b/comfy/templates/series/series.html
@@ -7,6 +7,13 @@
     background-color: rgb(236, 242, 248);
     min-width: 500px;
   }
+  hr {
+      opacity: 1;
+  }
+  img {
+      height: auto;
+      width: 100%;
+  }
 </style>
 {% endblock %}
 {% block content %}
